deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployer
  namespace: deployer-system
spec:
  selector:
    app: deployer
  ports:
    - name: http
      port: 80
      targetPort: http
